tests/rascal/negative/type_errors/L1/12_expression_ES10_D4_22.ob
MODULE Test12;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               p := (x <= (((z MOD x) DIV 1223) + 0));
  (* error *)  z := x;
               z := (+ (200 DIV 0));
               q := r;
               z := ((y MOD (+ (+ x))) * 1);
               p := q;
               y := (x + 0);
               x := (+ y);
               p := r;
               p := (~ p)
END Test12.